Hygieia_Collector_vsts-build/docker/manifest.yaml
### Creacion del service  
apiVersion: v1
kind: Service
metadata:
  name: #{component}#
  namespace: #{service}#-#{business-line}#-#{project-name}#-#{env}#
  labels:
    app: #{component}#
    app.bancolombia.com.co/env: "#{env}#"
    app.bancolombia.com.co/team: "#{team}#"
    app.bancolombia.com.co/owner: "#{owner}#"
    app.bancolombia.com.co/cost-center: "#{cost-center}#"
    app.bancolombia.com.co/application-code: "#{application-code}#"
    app.bancolombia.com.co/service: "#{service}#"
    app.bancolombia.com.co/business-line: "#{business-line}#"
    app.bancolombia.com.co/project-name: "#{project-name}#"
    app.bancolombia.com.co/pmo: "#{pmo}#"
    app.bancolombia.com.co/society: "#{society}#"
spec:
  ports:
  - name: http
    port: #{service-port}#
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: http
  selector:
    app: #{component}#-pod
---
### Creacion del deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{component}# 
  namespace: #{service}#-#{business-line}#-#{project-name}#-#{env}#
  labels:
    app.bancolombia.com.co/env: "#{env}#"
    app.bancolombia.com.co/team: "#{team}#"
    app.bancolombia.com.co/owner: "#{owner}#"
    app.bancolombia.com.co/cost-center: "#{cost-center}#"
    app.bancolombia.com.co/application-code: "#{application-code}#"
    app.bancolombia.com.co/service: "#{service}#"
    app.bancolombia.com.co/business-line: "#{business-line}#"
    app.bancolombia.com.co/project-name: "#{project-name}#"
    app.bancolombia.com.co/pmo: "#{pmo}#"
    app.bancolombia.com.co/society: "#{society}#"
spec:
  replicas: #{replicas}# 
  selector:
    matchLabels:
      app: #{component}#-pod
      version: "1.0"
  template:
    metadata:
      labels:
        app: #{component}#-pod
        version: "1.0"
    spec:
      containers:
      - name: #{component}#
        image: #{image}#
        ports:
        - name: http
          containerPort: #{container-port}#
        resources:
          limits:
            cpu: "#{LIMIT_CPU}#"
            memory: "#{LIMIT_MEMORY}#"
          requests:
            cpu: "#{REQUEST_CPU}#"
            memory: "#{REQUEST_MEMORY}#"       
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
             - matchExpressions:
               - key: bancolombia.com.co/service
                 operator: In
                 values:
                 - #{service}#
               - key: bancolombia.com.co/business-line
                 operator: In
                 values:
                 - #{business-line}#
               - key: bancolombia.com.co/project-name
                 operator: In
                 values:
                 - #{project-name}#
               - key: bancolombia.com.co/env
                 operator: In
                 values:
                 - #{env}#
